Backport r580598: fix inflate_out filter initialisation in mod_deflate. PR 43512

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@580916 13f79535-47bb-0310-9956-ffa450edef68